--- a/roles/install-docker/tasks/main.yml
+++ b/roles/install-docker/tasks/main.yml
@@ -2,12 +2,12 @@
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
     state: present
-  tags: docker
+
 
 - name: Add Docker packages to Repository
   apt_repository:
     repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release|lower }} stable
-  tags: docker
+
 
 - name: Verify Docker dependencies
   apt:
@@ -26,22 +26,23 @@
     state: latest
     force_apt_get: true
     update_cache: yes
-  tags: docker
+
 
 - name: Install Docker Module for Python
   pip:
     name: docker
-  tags: docker
+
 
 - name: Appending the group docker 
   user:
     name: ubuntu
     groups: docker
     append: yes
-  tags: docker
+
 
 - name: Get docker version
   shell: "docker -v | cut -d ' ' -f 3 | cut -d ',' -f 1"
   register: version
 
 - debug: var=version.stdout
+- debug: var=ansible_nodename
