--- a/roles/gluster-init/tasks/main.yml
+++ b/roles/gluster-init/tasks/main.yml
@@ -1,28 +1,27 @@
----
-- name: Delete old Gluster volume 
+- name: Delete old Gluster volume
   file:
-    path: "{{gluster_volume_path}}/{{inventory_hostname}}/brick"
+    path: "{{ gluster_volume_path }}/{{ inventory_hostname }}/brick"
     state: absent
-    force: true 
+    force: true
 
-- name: Create XFS Path {{gluster_volume_path}}/{{inventory_hostname}}
+- name: Create XFS Path {{ gluster_volume_path }}/{{ inventory_hostname }}
   file:
-    path: "{{gluster_volume_path}}/{{inventory_hostname}}"
+    path: "{{ gluster_volume_path }}/{{ inventory_hostname }}"
     state: directory
 
-- name: Create a XFS filesystem on {{device2_hdd_dev}}
+- name: Create a XFS filesystem on {{ device2_hdd_dev }}
   filesystem:
     fstype: xfs
-    dev: "{{device2_hdd_dev}}"
+    dev: "{{ device2_hdd_dev }}"
 
-- name: Mount XFS volume {{device2_hdd_dev}} to {{gluster_volume_path}}/{{inventory_hostname}}
+- name: Mount XFS volume {{ device2_hdd_dev }} to {{ gluster_volume_path }}/{{ inventory_hostname }}
   mount:
-    path: "{{gluster_volume_path}}/{{inventory_hostname}}"
-    src: "{{device2_hdd_dev}}"
+    path: "{{ gluster_volume_path }}/{{ inventory_hostname }}"
+    src: "{{ device2_hdd_dev }}"
     fstype: xfs
     state: mounted
 
-- name: Verify Gluster dependencies  
+- name: Verify Gluster dependencies
   apt:
     pkg:
       - xfsprogs
@@ -42,12 +41,12 @@
 
 - name: Check if Gluster volume is initialized
   stat:
-    path: "{{gluster_volume_path}}/{{inventory_hostname}}/brick"
+    path: "{{ gluster_volume_path }}/{{ inventory_hostname }}/brick"
   register: glustervolume
 
 - name: Verify Gluster volume path
   file:
-    path: "{{gluster_volume_path}}/{{inventory_hostname}}/brick"
+    path: "{{ gluster_volume_path }}/{{ inventory_hostname }}/brick"
     state: directory
 
 - name: Initialize Gluster Cluster (on first node)
@@ -55,17 +54,15 @@
   loop: "{{ groups['gluster_nodes'] }}"
   run_once: true
   shell: gluster peer probe {{ item }}
-  
+
 - name: Create Gluster Volume (on first node)
   when: glustervolume.stat.exists == false
   run_once: true
   shell: >
-    gluster volume create {{gluster_volume_name}} \
-    replica 3 \
-    {{groups['gluster_nodes'][0]}}:{{gluster_volume_path}}/{{groups['gluster_nodes'][0]}}/brick \
-    {{groups['gluster_nodes'][1]}}:{{gluster_volume_path}}/{{groups['gluster_nodes'][1]}}/brick \
-    {{groups['gluster_nodes'][2]}}:{{gluster_volume_path}}/{{groups['gluster_nodes'][2]}}/brick
-
+    gluster volume create {{ gluster_volume_name }} replica 3 arbiter 1
+    {{ groups['gluster_nodes'][2] }}:{{ gluster_volume_path }}/{{ groups['gluster_nodes'][2] }}/brick
+    {{ groups['gluster_nodes'][0] }}:{{ gluster_volume_path }}/{{ groups['gluster_nodes'][0] }}/brick
+    {{ groups['gluster_nodes'][1] }}:{{ gluster_volume_path }}/{{ groups['gluster_nodes'][1] }}/brick
 
 - name: Concatenate a list to string
   run_once: true
@@ -74,13 +71,13 @@
 
 - name: Secure Gluster Volume (on first node)
   run_once: true
-  shell: >
-    gluster volume set {{gluster_volume_name}} auth.allow {{ allow_hosts }}
+  shell: |
+    gluster volume set {{ gluster_volume_name }} auth.allow {{ allow_hosts }}
 
 - name: Start Gluster Volume (on first node)
   when: glustervolume.stat.exists == false
   run_once: true
-  shell: gluster volume start {{gluster_volume_name}}
+  shell: gluster volume start {{ gluster_volume_name }}
 
 - name: Wait 30s for Gluster volume to be replicated
   run_once: true
@@ -89,13 +86,13 @@
 
 - name: Verify Gluster mount path
   file:
-    path: "{{gluster_mount_path}}"
+    path: "{{ gluster_mount_path }}"
     state: directory
 
-- name: Mount Gluster volume {{gluster_volume_name}} to {{gluster_mount_path}}
+- name: Mount Gluster volume {{ gluster_volume_name }} to {{ gluster_mount_path }}
   mount:
-    path: "{{gluster_mount_path}}"
-    src: "localhost:/{{gluster_volume_name}}"
+    path: "{{ gluster_mount_path }}"
+    src: localhost:/{{ gluster_volume_name }}
     fstype: glusterfs
     opts: defaults,_netdev,backupvolfile-server=localhost
     state: mounted
