--- a/roles/docker-swarm-init/tasks/main.yml
+++ b/roles/docker-swarm-init/tasks/main.yml
@@ -1,4 +1,3 @@
----  
 - name: Check if Swarm has already been Initialized
   shell: docker node ls
   register: swarm_status
@@ -8,16 +7,26 @@
   docker_swarm:
     state: present
   run_once: true
+  when: swarm_status.rc != 0
 
 - name: Get the Manager join-token
   shell: docker swarm join-token --quiet manager
-  when: inventory_hostname == groups.swarm_managers[0]
+  when: inventory_hostname == groups['swarm_managers'][0]
   register: manager_token
+  run_once: true
 
 - name: Get the worker join-token
   shell: docker swarm join-token --quiet worker
-  when: inventory_hostname == groups.swarm_managers[0]
+  when: inventory_hostname == groups['swarm_managers'][0]
   register: worker_token
+  run_once: true
 
-- debug: var=manager_token.stdout
-- debug: var=worker_token.stdout
+- name: Debug Manager join-token
+  debug:
+    var: manager_token.stdout
+  when: inventory_hostname == groups['swarm_managers'][0]
+
+- name: Debug Worker join-token
+  debug:
+    var: worker_token.stdout
+  when: inventory_hostname == groups['swarm_managers'][0]
