--- a/roles/geerlingguy-ntp/defaults/main.yml
+++ b/roles/geerlingguy-ntp/defaults/main.yml
@@ -11,10 +11,10 @@ ntp_manage_config: false
 
 # NTP server area configuration (leave empty for 'Worldwide').
 # See: http://support.ntp.org/bin/view/Servers/NTPPoolServers
-ntp_area: 'ru'
+ntp_area: "ru"
 ntp_servers:
   - "server 192.168.12.101 prefer iburst"
-  - "1{{ '.' + ntp_area if ntp_area else '' }}.pool.ntp.org iburst"
+  #- "1{{ '.' + ntp_area if ntp_area else '' }}.pool.ntp.org iburst"
   #- "2{{ '.' + ntp_area if ntp_area else '' }}.pool.ntp.org iburst"
   #- "3{{ '.' + ntp_area if ntp_area else '' }}.pool.ntp.org iburst"
 
