--- a/deploy-gluster.yml
+++ b/deploy-gluster.yml
@@ -1,16 +1,18 @@
+---
 - name: Install gluster
   hosts: gluster_nodes
   become: true
-  become_method: sudo
+  become_method: ansible.builtin.sudo
   vars_files:
     - ./vars/gluster.yml
   roles:
     - gluster-init
+
 - name: Add gluster clients
   hosts: docker
   become: true
-  become_method: sudo
+  become_method: ansible.builtin.sudo
   vars_files:
-  - ./vars/gluster.yml
+    - ./vars/gluster.yml
   roles:
-  - gluster-add-clients
+    - gluster-add-clients
