--- a/roles/gluster-init/tasks/main.yml
+++ b/roles/gluster-init/tasks/main.yml
@@ -1,28 +1,29 @@
+---
 - name: Delete old Gluster volume
-  file:
+  ansible.builtin.file:
     path: "{{ gluster_volume_path }}/{{ inventory_hostname }}/brick"
     state: absent
     force: true
 
 - name: Create XFS Path {{ gluster_volume_path }}/{{ inventory_hostname }}
-  file:
+  ansible.builtin.file:
     path: "{{ gluster_volume_path }}/{{ inventory_hostname }}"
     state: directory
 
 - name: Create a XFS filesystem on {{ device2_hdd_dev }}
-  filesystem:
+  community.general.filesystem:
     fstype: xfs
     dev: "{{ device2_hdd_dev }}"
 
 - name: Mount XFS volume {{ device2_hdd_dev }} to {{ gluster_volume_path }}/{{ inventory_hostname }}
-  mount:
+  ansible.posix.mount:
     path: "{{ gluster_volume_path }}/{{ inventory_hostname }}"
     src: "{{ device2_hdd_dev }}"
     fstype: xfs
     state: mounted
 
 - name: Verify Gluster dependencies
-  apt:
+  ansible.builtin.apt:
     pkg:
       - xfsprogs
       - attr
@@ -31,21 +32,21 @@
       - glusterfs-client
     state: present
     force_apt_get: true
-    update_cache: yes
+    update_cache: true
 
 - name: Enable Gluster service
-  systemd:
+  ansible.builtin.systemd:
     name: glusterd
-    enabled: yes
+    enabled: true
     state: started
 
 - name: Check if Gluster volume is initialized
-  stat:
+  ansible.builtin.stat:
     path: "{{ gluster_volume_path }}/{{ inventory_hostname }}/brick"
   register: glustervolume
 
 - name: Verify Gluster volume path
-  file:
+  ansible.builtin.file:
     path: "{{ gluster_volume_path }}/{{ inventory_hostname }}/brick"
     state: directory
 
@@ -53,44 +54,39 @@
   when: glustervolume.stat.exists == false
   loop: "{{ groups['gluster_nodes'] }}"
   run_once: true
-  shell: gluster peer probe {{ item }}
-
+  ansible.builtin.command: gluster peer probe {{ item }}
 - name: Create Gluster Volume (on first node)
   when: glustervolume.stat.exists == false
   run_once: true
-  shell: >
+  ansible.builtin.shell: >
     gluster volume create {{ gluster_volume_name }} replica 3 arbiter 1
     {{ groups['gluster_nodes'][2] }}:{{ gluster_volume_path }}/{{ groups['gluster_nodes'][2] }}/brick
     {{ groups['gluster_nodes'][0] }}:{{ gluster_volume_path }}/{{ groups['gluster_nodes'][0] }}/brick
     {{ groups['gluster_nodes'][1] }}:{{ gluster_volume_path }}/{{ groups['gluster_nodes'][1] }}/brick
-
 - name: Concatenate a list to string
   run_once: true
-  set_fact:
+  ansible.builtin.set_fact:
     allow_hosts: "{{ groups['ubuntu'] | join(',') }}"
 
 - name: Secure Gluster Volume (on first node)
   run_once: true
-  shell: |
+  ansible.builtin.shell: |
     gluster volume set {{ gluster_volume_name }} auth.allow {{ allow_hosts }}
-
 - name: Start Gluster Volume (on first node)
   when: glustervolume.stat.exists == false
   run_once: true
-  shell: gluster volume start {{ gluster_volume_name }}
-
+  ansible.builtin.command: gluster volume start {{ gluster_volume_name }}
 - name: Wait 30s for Gluster volume to be replicated
   run_once: true
   when: glustervolume.stat.exists == false
-  shell: sleep 30
-
+  ansible.builtin.command: sleep 30
 - name: Verify Gluster mount path
-  file:
+  ansible.builtin.file:
     path: "{{ gluster_mount_path }}"
     state: directory
 
 - name: Mount Gluster volume {{ gluster_volume_name }} to {{ gluster_mount_path }}
-  mount:
+  ansible.posix.mount:
     path: "{{ gluster_mount_path }}"
     src: localhost:/{{ gluster_volume_name }}
     fstype: glusterfs
