--- a/roles/docker-swarm-add-wrk/tasks/main.yml
+++ b/roles/docker-swarm-add-wrk/tasks/main.yml
@@ -1,15 +1,16 @@
+---
 - name: Check if Swarm is Already Initialized
-  shell: docker node ls
+  ansible.builtin.command: docker node ls
   register: swarm_status
   ignore_errors: true
 
 - name: Debug Worker join-token
-  debug:
+  ansible.builtin.debug:
     var: hostvars[groups['swarm_managers'][0]]['worker_token']['stdout']
   when: inventory_hostname == groups['swarm_managers'][0]
 
 - name: Add Workers to the Swarm
-  docker_swarm:
+  community.docker.docker_swarm:
     state: join
     advertise_addr: "{{ ansible_default_ipv4.address }}"
     join_token: "{{ hostvars[groups['swarm_managers'][0]]['worker_token']['stdout'] }}"
