--- a/roles/install-docker/tasks/main.yml
+++ b/roles/install-docker/tasks/main.yml
@@ -1,21 +1,24 @@
 ---
-- name: Get Docker key
-  apt_key:
+- name: Set system timezone to {{ tz }}
+  ansible.builtin.command: timedatectl set-timezone {{ tz }}
+  changed_when: false
+  check_mode: false
+
+- name: Add Docker GPG key
+  ansible.builtin.apt_key:
+    url: "{{ docker_gpg_key_url }}"
+    state: present
     keyring: /etc/apt/trusted.gpg.d/docker.gpg
-    state: present
-    url: "https://download.docker.com/linux/ubuntu/gpg"
 
-- name: Add Docker packages to Repository
-  apt_repository:
-    repo: >-
-      deb [arch=amd64] https://download.docker.com/linux/ubuntu {{
-      ansible_distribution_release|lower }} stable
+- name: Add Docker repository
+  ansible.builtin.apt_repository:
+    repo: "{{ docker_repo_url }}"
     state: present
 
-- name: Verify Docker dependencies
-  apt:
+- name: Install Docker dependencies
+  ansible.builtin.apt:
     force_apt_get: true
-    pkg:
+    name:
       - apt-transport-https
       - ca-certificates
       - curl
@@ -23,27 +26,57 @@
       - python3-pip
       - virtualenv
       - python3-setuptools
+    state: present
+    update_cache: true
+
+- name: Install Docker packages
+  ansible.builtin.apt:
+    force_apt_get: true
+    name:
       - docker-ce
       - docker-ce-cli
       - containerd.io
       - docker-compose-plugin
-    state: latest
-    update_cache: yes
+    state: present
+    update_cache: true
 
-- name: Appending the group docker
-  user:
+- name: Add user 'ubuntu' to the docker group
+  ansible.builtin.user:
     name: ubuntu
     groups: docker
-    append: yes
+    append: true
 
-- name: Install Docker Compose if not exist
-  get_url:
-    url: https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-linux-x86_64
-    dest: /usr/local/bin/docker-compose
-    mode: '0755'
+- name: Check if Docker Compose is already installed
+  ansible.builtin.stat:
+    path: "{{ docker_compose_path }}"
+  register: docker_compose_stat
 
-- name: Change Docker Compose permission
-  file:
-    path: /usr/local/bin/docker-compose
+- name: Download Docker Compose binary
+  ansible.builtin.get_url:
+    url: "{{ docker_compose_url }}"
+    dest: "{{ docker_compose_path }}"
+    mode: "0755"
+  when: not docker_compose_stat.stat.exists
+
+- name: Set Docker Compose permissions
+  ansible.builtin.file:
+    path: "{{ docker_compose_path }}"
+    owner: root
     group: docker
-    mode: '0750'
+    mode: "0755"
+  when: not docker_compose_stat.stat.exists
+
+- name: Verify Docker service is running
+  ansible.builtin.systemd:
+    name: docker
+    state: started
+    enabled: true
+
+- name: Verify Docker Compose version
+  ansible.builtin.command: "{{ docker_compose_path }} --version"
+  register: docker_compose_version_result
+  changed_when: false
+
+- name: Display Docker Compose version
+  ansible.builtin.debug:
+    msg: "Docker Compose version: {{ docker_compose_version_result.stdout }}"
